add correct openapi annotations
